customer dashboard fixed